remove parent, child, disjoint maps